--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+# Dependencies
+node_modules/
+
+# Build outputs
+/dist/
+/.vite/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor/OS
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+# Env
+.env*
+
+# Misc
+*.local
+*.cache
 logs
 *.log
 npm-debug.log*
